--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "install": "^0.13.0",
-    "npm": "^11.2.0",
+    "npm": "^11.3.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.9",
@@ -44,9 +44,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-native-zeroconf": "^0.13.8"
+    "react-native-zeroconf": "^0.13.8",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
