--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "react-dom": "18.3.1",
     "react-native": "^0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-incall-manager": "^4.2.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
+    "react-native-webrtc": "^124.0.5",
     "react-native-webview": "13.12.5",
     "react-native-zeroconf": "^0.13.8",
     "uuid": "^11.1.0"
